--- a/produtos.html
+++ b/produtos.html
@@ -9,6 +9,14 @@
     <title>Produtos - Barbearia Alura</title>
 </head>
 <body>
-    
+    <header>
+        <h1><img src="/img/logo.png"></h1>
+
+        <ul>
+            <li>Home</li>
+            <li>Produtos</li>
+            <li>Contato</li>
+        </ul>
+    </header>
 </body>
 </html>
