--- a/produtos.html
+++ b/produtos.html
@@ -46,5 +46,10 @@
         </ul>
     </main>
 
+    <footer>
+        <img src="/img/logo-branco.png">
+        <p>Copyright Barbearia Alura - 2019</p>
+    </footer>
+
 </body>
 </html>
