--- a/contato.html
+++ b/contato.html
@@ -45,7 +45,14 @@
                 
                 <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">WhatsApp</label>
             </div>
-            
+            <div>    
+                <p>Qual horário prefere ser atendido?</p>
+                <select name="" id="">
+                    <option>Manhã</option>
+                    <option>Tarde</option>
+                    <option>Noite</option>
+                </select>
+            </div>    
             <label class="checkbox"><input type="checkbox">Gostaria de receber nossas novidades por e-mail?</label>
 
             <input type="submit" value="Enviar Formulário">
