--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family-Montserrat&display=swap">
     
     <title>Barbearia Alura</title>
 
@@ -26,7 +27,9 @@
     <main>
         <section class="principal">   
             <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
- 
+            
+            <img src="/img/utensilios.jpg" alt="Utensilios" class="Utensilios de um barbeiro.">
+
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
             <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p> 
@@ -35,7 +38,7 @@
         </section>
 
         <section class="beneficios">
-            <h3 class="titulo-centralizado">Benefícios</h3>
+            <h3 class="titulo-principal">Benefícios</h3>
 
             <ul>
                 <li class="itens">Atendimento aos Cliente</li>
