--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="stylesheet" href="/styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family-Montserrat&display=swap">
@@ -25,8 +25,6 @@
     </header>
     <img class="banner" src="/img/banner.jpg">
     <main>
-
-
         <section class="principal">   
             <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
             
@@ -62,7 +60,7 @@
                 </ul><img src="/img/beneficios.jpg" class="imagem-beneficios">
             </div>    
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/SELgVCp2egU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/SELgVCp2egU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         
         </section>
